scss/_content.sass
// Front Page

.hp-featured-area
  height: 620px
  margin-top: -11px
  position: relative

.cycle-slideshow
  height: 100%
  width: 100%

  div
    width: 100%
    height: 100%
    background-repeat: no-repeat
    background-attachment: scroll
    background-position: center center

    +background-size(cover)

    z-index: 99

.hp-hero
  background-image: url("img/hp-hero.png")
  background-repeat: no-repeat
  background-attachment: scroll
  background-position: center center

  +background-size(cover)

.hp-newsletter
  background: $color-header
  background-image: url("img/tile-wood-115h.png")
  background-blend-mode: multiply

  +background-size(contain)

  position: absolute
  bottom: 0
  left: 0
  right: 0
  z-index: 999

  .wrapper
    float: right
    max-width: 747px
    padding: 1.5em 1.5em 1em

  form
    padding: 0 0.5em 1em
    float: left

  .social-icons
    float: left

  input
    float: left
    margin: 0

  input[type="email"]
    width: 60%
    padding: 3.8px 1em

  input[type="submit"]
    width: 40%

    +font-size(13)

    padding: 0.55em 0.25em
    font-weight: 700

  .social-icon
    fill: $color-background-light
    margin: 0.25em 0.5em

    &:hover,
    &:active,
    &:focus
      fill: $color-input

.home
  .col-one-third
    +order(2)

  .col-two-third
    +order(1)

.hp-recent-news
  padding-right: 1.5em

  .news-header
    font-family: $font-subheading

    +font-size(30)

    background: $color-subheading
    color: $color-background-light
    padding: 0.25em 0.5em
    background-image: url(img/tile-wood-115h.png)
    background-blend-mode: multiply

  .news
    padding: 0.8em 1em
    position: relative
    min-height: 150px

    &:nth-of-type(odd)
      background: lighten($color-subheading, 10%)
      background-image: url(img/GAnewstextureA.png)

    &:nth-of-type(even)
      background: $color-background-light
      background-image: url(img/GAnewstextureB.png)

  .text
    float: left
    width: calc(100% - 120px)
    color: $color-tour-dark

  .entry-meta
    +font-size(14)

    font-weight: 400

  .title
    +font-size(24)

    a
      text-decoration: none
      color: $color-tour-dark
      font-weight: 700

  .excerpt
    +font-size(16)

    font-family: $font-base
    font-weight: 400

    a
      color: $color-tour-dark

  .featured-image
    float: right
    padding-top: 0.5em
    text-align: right
    width: 120px
    position: absolute
    bottom: 1.5em
    right: 1em

  p
    margin: 0 auto

  img
    outline: 5px solid $color-input

  .news-footer
    +font-size(14)

    text-align: center
    text-transform: uppercase

    a
      background: $color-subheading
      color: $color-background-light
      display: block
      padding: 1em 0.5em
      text-decoration: none
      font-weight: 700

      &:hover,
      &:active,
      &:focus
        background: lighten($color-subheading, 10%)
        color: $color-input


// Archive Color theme
.blog,
.archive,
.search
  @extend .dark-theme

// Base Card Styles

.card-grid
  +display-flex

  +flex-wrap(wrap)

  +justify-content(space-between)

  margin: 1.5em auto

  article,
  .card-container
    // display: flex;
    // flex-direction: column;
    margin-bottom: 2em

    // padding: 0 4px 0;

    &:nth-of-type(4n+1)
      background: $color-newsletter

      .card
        background: $color-newsletter

      .featured-image
        background: lighten($color-newsletter, 5%)
        background-image: url(img/GAnewstextureA.png)

    &:nth-of-type(4n+2)
      background: $color-nav-link

      .card
        background: $color-nav-link

      .featured-image
        background: lighten($color-nav-link, 5%)
        background-image: url(img/GAnewstextureB.png)

    &:nth-of-type(4n+3)
      background: $color-button

      .card
        background: $color-button

      .featured-image
        background: lighten($color-button, 5%)
        background-image: url(img/GAnewstextureA.png)

    &:nth-of-type(4n+4)
      background: $color-link

      .card
        background: $color-link

      .featured-image
        background: lighten($color-link, 5%)
        background-image: url(img/GAnewstextureB.png)

  .card
    display: flex
    flex-direction: column
    text-decoration: none
    color: inherit
    font-weight: inherit
    margin-left: auto
    margin-right: auto

  .video-card
    background: $color-newsletter
    display: block
    text-decoration: none
    color: inherit
    font-weight: inherit
    margin-left: auto
    margin-right: auto
    width: 100%

  .featured-image
    text-align: center
    padding: 0.75em

  .featured-video
    line-height: 1

  .upper-text
    text-align: left

  .lower-text
    padding: 0.75em
    color: $color-tour-dark
    flex-grow: 1

    // min-height: 120px;

  .entry-title
    +font-size(20)

    color: $color-input
    font-family: $font-base
    font-weight: 700
    line-height: 1
    margin: 0

  .posted-on,
  .entry-meta
    +font-size(14)

    color: $color-input
    font-weight: 400
    line-height: 1.5

  .read-more
    color: $color-input

.card-grid-three
  article,
  .card-container
    width: 32%

.card-grid-two
  article,
  .card-container
    width: 49%

.blog,
.archive,
.search
  .card
    // width: 260px;

/*--------------------------------------------------------------
 // *# Pagination

.nav-links
  margin: 0 auto 3em
  padding-top: 1.5em
  text-align: center
  border-top: 1px solid $color-subheading

  .page-numbers
    padding: 0.25em 0.5em
    text-decoration: none

    &:hover,
    &:active,
    &:focus
      text-decoration: underline

  .page-numbers.current
    background-color: $color-subheading
    color: $color-text-light

    &:hover,
    &:active,
    &:focus
      text-decoration: none
      cursor: default

  .page-numbers.dots
    padding: 0.25em

    &:hover,
    &:active,
    &:focus
      text-decoration: none

// /*--------------------------------------------------------------
//  *# Band Members
//  *--------------------------------------------------------------
.post-type-archive-ga_band_member
  .upper-text
    width: 220px
    max-width: 100%
    margin-left: auto
    margin-right: auto

  .lower-text
    +font-size(14)

    padding: 0
    width: 220px
    max-width: 100%
    margin-left: auto
    margin-right: auto

figure.featured-image
  margin: 1.5em auto

// /*--------------------------------------------------------------
//  *# Albums
//  *--------------------------------------------------------------

.post-type-archive-ga_album
  .upper-text
    width: 360px
    max-width: 100%
    margin-left: auto
    margin-right: auto

  .lower-text
    +font-size(14)

    width: 360px
    max-width: 100%
    margin: 0 auto

  .card
    width: 100%

.artist
  color: $color-subheading
  font-weight: 400

  +font-size(40)

  line-height: 1.2
  display: block

h1.album
  color: $color-link
  font-family: $font-subheading
  font-weight: 400

  +font-size(26)

  line-height: 1.4
  margin: 0.2em 0

.release-info
  +font-size(16)

  font-style: italic

.purchase-link-icon
  fill: $color-subheading

.purchase-links
  list-style: none
  margin: 1.5em 0
  padding: 0
  font-family: $font-legible
  text-transform: uppercase

  li
    +inline-block

    text-align: center
    margin-right: 1.5em

  .type-text
    +font-size(16)

    color: $color-subheading

  .type-description
    +font-size(14)

    color: $color-link

  a
    text-decoration: none

    &:hover,
    &:active,
    &:focus
      .type-text,
      .type-description
        color: $color-text-dark

      .purchase-link-icon
        fill: $color-text-dark

.tracklist-header
  +font-size(30)
  font-family: $font-subheading
  background-color: $color-subheading
  color: $color-background-light
  background-image: url(img/tile-wood-115h.png)
  background-blend-mode: multiply

  margin: 1.5em 0 0
  padding: 0.5em 1em

.tracklist
  list-style: none
  margin: 0 0 1.5em
  padding-left: 0

  li
    margin: 0
    padding: 1em 1.5em

  li:nth-of-type(odd)
    +background-image(linear-gradient(to right, $color-tracklist-dark, $color-tracklist-light))

  li:nth-of-type(even)
    +background-image(linear-gradient(to right, $color-tracklist-medium, $color-tracklist-light))

.preview-track
  display: inline-block
  float: right

// /*--------------------------------------------------------------
//  *# Store
//  *--------------------------------------------------------------
.page-template-page-store
  .widget
    padding-left: 1.5em

  .row
    margin-bottom: 0

  .card-grid
    margin-top: 0

  .card
    width: 360px

  .button
    @extend .button-1

  .banner
    .button
      display: none

.store-link
  +font-size(12)

  color: $color-input
  font-family: $font-legible
  letter-spacing: 0.25em
  padding: 0 1.5em 1.5em
  text-transform: uppercase
  margin-top: auto

// /*--------------------------------------------------------------
//  *# Visuals
//  *--------------------------------------------------------------

.page-template-page-visuals
  .card
    width: 260px

// /*--------------------------------------------------------------
//  *# Tour
//  *--------------------------------------------------------------

.tour-dates
  margin: 1.5em auto

.tour-date
  +display-flex

  font-family: $font-subheading
  border-right: 1px solid $color-tour-dark

  // border-left: 1px solid $color-tour-dark;
  border-bottom: 1px solid $color-tour-dark

  .date
    background: $color-tour-light
    font-weight: 500
    padding: 1em 0
    text-align: center
    width: 100px

  .month
    color: $color-nav-link

    +font-size(20)

    line-height: 1
    text-transform: uppercase

  .day
    color: $color-nav-link

    +font-size(40)

    line-height: 1

  .details
    +display-flex

    +justify-content(space-between)

    +background-image(linear-gradient(to right, $color-tour-dark, $color-tour-light))

    height: 100%
    padding: 1.5em
    position: relative
    width: calc(100% - 100px)

  .location
    color: $color-background-light

    a
      text-decoration: none
      color: $color-background-light

      &:hover,
      &:active,
      &:focus
        color: $color-input

  .title
    +font-size(22)

    font-weight: 500

  .city
    font-family: $font-base

    +font-size(14)

  .additional-info
    font-family: $font-base

    +font-size(14)

  .buttons
    +display-flex

    +justify-content(space-between)

    padding: 0.5em 0 0

  .ticket,
  .share,
  .info
    padding: 0 1.5em
    vertical-align: middle

.icon-info,
.icon-share,
.icon-on-sale
  .a
    fill: $color-nav-link

  .b
    fill: $color-link

  &:hover,
  &:active,
  &:focus
    .a
      fill: $color-link

    .b
      fill: $color-nav-link

.icon-sold-out
  .a
    fill: $color-link

  .b
    fill: $color-nav-link

.share-button
  width: 30px
  height: 30px
  list-style: none
  margin: 0
  padding: 0
  position: relative

  ul
    background: $color-tour-dark
    display: none
    list-style: none
    margin: 0
    padding: 4px
    text-align: center

  li
    margin: 0

  a
    text-decoration: none

    +font-size(16)

  &:hover,
  &:active,
  &:focus
    width: auto
    height: auto

    ul
      position: absolute
      top: -30px
      left: -30px
      right: -30px
      bottom: -30px
      display: block
      z-index: 99

    .icon-share
      .a
        fill: $color-link

      .b
        fill: $color-nav-link

.ticket
  font-family: $font-legible
  line-height: 30px

  a
    text-decoration: none
    font-weight: 400

